# FitChip

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: adding-a-target.md  architecture.md  input-formats.md  onnx-conversion.md  op-support.md  pytorch-path.md  writing-a-backend.md
fitchip/: __init__.py
fitchip/backends/executorch/: _et.py  adapter.py  codegen.py  estimate.py  manifest.yaml  ops_executorch.yaml
fitchip/backends/executorch/templates/: CMakeLists.txt.j2  NOTICE.j2  README.md.j2  arm-none-eabi.cmake.j2  main.cpp.j2  model_pte.h.j2
fitchip/backends/tflm/: adapter.py  codegen.py  estimate.py  manifest.yaml  ops_tflm.yaml
fitchip/backends/tflm/templates/: CMakeLists.txt.j2  NOTICE.j2  README.md.j2  idf_component.yml.j2  main.cc.j2  main_CMakeLists.txt.j2  model_data.h.j2  platformio.ini.j2  sdkconfig.defaults.j2
fitchip/cli/: main.py
fitchip/core/: pipeline.py
fitchip/core/cal/: __init__.py  backend.py  manifest.py  quant.py  registry.py
fitchip/core/convert/: __init__.py  calibration.py  chain.py  tf_convert.py  torch_convert.py
fitchip/core/inspector/: __init__.py  base.py  executorch.py  keras.py  onnx.py  pytorch.py  tf_graph.py  tflite.py
fitchip/core/selection/: __init__.py  engine.py
fitchip/core/targets/: __init__.py  esp32.yaml  esp32c3.yaml  esp32s3.yaml  nucleo_f446re.yaml  stm32f746.yaml  stm32h743.yaml
fitchip/orchestrator/: app.py  jobs.py
fitchip/samples/: __init__.py  registry.yaml
fitchip/web/: app.py
tests/: conftest.py  test_convert_chain.py  test_executorch_backend.py  test_executorch_torch_lane.py  test_inspector.py  test_jobs.py  test_manifest.py  test_multiformat.py  test_orchestrator.py  test_pipeline_cli.py  test_selection.py  test_targets.py  test_tflm_backend.py
